# podcast-transcriber-cli

./: .env.example  .gitignore  README.md  pyproject.toml
skills/podcast-transcriber/: SKILL.md
src/podcast_transcriber/: cleanup.py  cli.py  config.py  downloader.py  models.py  resolver.py  summarizer.py  transcriber.py  writer.py
src/podcast_transcriber/resolvers/: __init__.py  apple.py  direct_audio.py  rss.py  xiaoyuzhou.py
tests/: test_cleanup.py  test_cli.py  test_config.py  test_direct_audio.py  test_downloader.py  test_markdown_writer.py  test_network_resolver.py  test_resolver_chain.py  test_rss_resolver.py  test_summarizer.py  test_transcriber.py  test_xiaoyuzhou_resolver.py
tests/fixtures/rss/: basic_feed.xml
tests/fixtures/xiaoyuzhou/: episode_page.html
