[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-transcriber-cli"
version = "0.1.0"
description = "Local-first podcast transcription CLI with Xiaoyuzhou-first link resolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "feedparser>=6.0,<7",
  "faster-whisper>=1.1,<2",
  "httpx>=0.27,<1",
  "openai>=1.50,<2",
  "python-dotenv>=1.0,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
podcast-transcribe = "podcast_transcriber.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
